<resources>
    <string name="app_name">FirstApplication</string>
    <string name="spiice">Spiice</string>
    <string name="discover_the_platform">Discover the platform</string>
    <string name="login">You have an account ? Log-in</string>
    <string name="second_text">Find projects from companies everywhere in the word</string>
    <string name="skip">Skip</string>
    <string name="log_in">Log-in</string>
    <string name="return_to_sign_up">Return to Sign-up</string>
    <string name="sign_up_down_text">You have an account ? Log-in</string>
    <string name="sign_up">Sign-up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="work_hard_and_level_up">Work hard and level up!</string>
    <string name="enjoy_your_progess">Enjoy your progress!</string>
    <string name="logout">Logout</string>
    <string name="add_new">Add new</string>
    <string name="back">Back</string>
    <string name="add_note">Add note</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="add">Save</string>
    <string name="note_saved">Note saved!</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="all_notes">All Notes</string>
    <string name="name_empty">Name field is empty</string>
    <string name="text">Text</string>
    <string name="delete_profile">Delete profile</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="insert_first_name">Insert First name!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_note">Delete note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_note">Show Note</string>
    <string name="delete_current_use">Delete Current User?</string>
    <string name="_0">0</string>
    <string name="_0_notes">0 notes</string>
    <string name="delete_all_notes_2">Delete All Notes?</string>
    <string name="ok">Ok</string>
    <string name="invalid_password_or_email">Invalid Password Or Email</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="minimum_8_characters_password">Minimum 8 Characters Password</string>
    <string name="must_contain_1_upper_case_character">Must contain 1 Upper-case Character</string>
    <string name="search_by_message">Search by message</string>
    <string name="email_already_in_use">Email Already In Use</string>

</resources>