<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/banner"
        layout="@layout/view_banner" />

    <TextView
        style="@style/Add_notes_up_style"
        android:layout_width="@dimen/dp_110"
        android:layout_height="@dimen/dp_34"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_82"
        android:layout_marginEnd="@dimen/dp_250"
        android:layout_marginBottom="@dimen/dp_700"
        android:text="@string/add_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title_edit_text"
        style="@style/EditText_style"
        android:layout_width="@dimen/dp_344"
        android:layout_height="@dimen/dp_56"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_154"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_602"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/message_edit_text"
        style="@style/EditText_style"
        android:layout_width="@dimen/dp_344"
        android:layout_height="@dimen/dp_160"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_250"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_404"
        android:hint="@string/message"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_add"
        style="@style/Button_style"
        android:layout_width="@dimen/dp_264"
        android:layout_height="@dimen/dp_54"
        android:layout_marginStart="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_602"
        android:layout_marginEnd="@dimen/dp_56"
        android:layout_marginBottom="@dimen/dp_156"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>