<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/text_top"
        android:layout_width="@dimen/dp_140"
        android:layout_height="@dimen/dp_52"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginEnd="@dimen/dp_230"
        android:layout_marginBottom="@dimen/dp_700"
        android:gravity="start"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_name"
        style="@style/Add_notes_up_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_140"
        android:layout_marginEnd="@dimen/dp_192"
        android:layout_marginBottom="@dimen/dp_656"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notes_quantity"
        style="@style/profile_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_192"
        android:layout_marginEnd="@dimen/dp_264"
        android:layout_marginBottom="@dimen/dp_594"
        android:gravity="start"
        android:text="@string/_0_notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logout_texView"
        style="@style/profile_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_254"
        android:layout_marginEnd="@dimen/dp_296"
        android:layout_marginBottom="@dimen/dp_540"
        android:gravity="start"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_profile_button"
        style="@style/profile_button"
        android:layout_width="@dimen/dp_138"
        android:layout_height="@dimen/dp_34"
        android:layout_marginStart="@dimen/dp_218"
        android:layout_marginTop="@dimen/dp_140"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_656"
        android:text="@string/delete_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_all_notes_button"
        style="@style/profile_button"
        android:layout_width="@dimen/dp_138"
        android:layout_height="@dimen/dp_34"
        android:layout_marginStart="@dimen/dp_218"
        android:layout_marginTop="@dimen/dp_192"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_594"
        android:text="@string/delete_all_notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>