<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles_third_onboard">

    <TextView
        android:id="@+id/textView1"
        style="@style/SpiiceOnboradStyle"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="722dp"
        android:text="@string/spiice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/third_text"
        style="@style/TextOnboardStyle"
        android:layout_width="254dp"
        android:layout_height="58dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="644dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="110dp"
        android:text="@string/enjoy_your_progess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skip_third"
        style="@style/SkipOnboardStyle"
        android:layout_width="38dp"
        android:layout_height="20dp"
        android:layout_marginStart="322dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="775dp"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>