<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles_sign_log">

    <Button
        android:id="@+id/button_sign_up"
        style="@style/Button_style"
        android:layout_width="264dp"
        android:layout_height="54dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="602dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="156dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/go_to_login_text_view"
        style="@style/Text_down_style"
        android:layout_width="240dp"
        android:layout_height="26dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="694dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="98dp"
        android:text="@string/sign_up_down_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        style="@style/Image_back_style"
        android:layout_width="344dp"
        android:layout_height="412dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="312dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text_up_style"
        android:layout_width="98dp"
        android:layout_height="36dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="656dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        style="@style/EditText_style"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="420dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/EditText_style"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="344dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_name_edit_text"
        style="@style/EditText_style"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="572dp"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/last_name_edit_text"
        style="@style/EditText_style"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="496dp"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>