<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles_first_window">

    <TextView
        android:id="@+id/spiice"
        style="@style/Spiice_style"
        android:layout_width="@dimen/dp_270"
        android:layout_height="@dimen/dp_126"
        android:layout_marginStart="@dimen/dp_64"
        android:layout_marginTop="@dimen/dp_218"
        android:layout_marginEnd="@dimen/dp_64"
        android:layout_marginBottom="@dimen/dp_466"
        android:text="@string/spiice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_spiice"
        style="@style/Button_style"
        android:layout_width="@dimen/dp_264"
        android:layout_height="@dimen/dp_54"
        android:layout_marginStart="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_602"
        android:layout_marginEnd="@dimen/dp_56"
        android:layout_marginBottom="@dimen/dp_156"
        android:text="@string/discover_the_platform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/go_to_login"
        style="@style/Text_down_style"
        android:layout_width="@dimen/dp_240"
        android:layout_height="@dimen/dp_26"
        android:layout_marginStart="@dimen/dp_68"
        android:layout_marginTop="@dimen/dp_694"
        android:layout_marginEnd="@dimen/dp_68"
        android:layout_marginBottom="@dimen/dp_98"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>